Finished pending tasks, currently failing with all documents.

--- a/src/main/java/resources/Coleccion/test.html
+++ b/src/main/java/resources/Coleccion/test.html
@@ -5,7 +5,7 @@
     <title>Service Worker Toolbox</title>
   </head>
   <body>
-	<p>Hola, me gustan las peliculas infantiles</p>
+	<p>Hola, me gustan las peliculas infantiles infantiles infantiles infantiles hola12hhh3 hello.hello saludos. $$</p>
     <!-- Images -->
     <img src="/images/contact.svg" height="80" width="80" />
     <img src="/images/info.svg" height="80" width="80" />
